--- a/src/ventanas/PanelDesign.form
+++ b/src/ventanas/PanelDesign.form
@@ -99,7 +99,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JComboBox" name="jComboBox1">
+            <Component class="javax.swing.JComboBox" name="cmbTalla">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Ubuntu" size="11" style="0"/>
@@ -107,11 +107,11 @@
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="7">
                     <StringItem index="0" value="TALLA"/>
-                    <StringItem index="1" value="$115 Chica"/>
-                    <StringItem index="2" value="$140 Mediana"/>
-                    <StringItem index="3" value="$170 Grande"/>
-                    <StringItem index="4" value="$190 Extra Grande"/>
-                    <StringItem index="5" value="$210 Jumbo"/>
+                    <StringItem index="1" value="115 - Chica"/>
+                    <StringItem index="2" value="140 - Mediana"/>
+                    <StringItem index="3" value="170 - Grande"/>
+                    <StringItem index="4" value="190 - Extra Grande"/>
+                    <StringItem index="5" value="210 - Jumbo"/>
                     <StringItem index="6" value=" "/>
                   </StringArray>
                 </Property>
@@ -119,6 +119,25 @@
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
+            </Component>
+            <Component class="javax.swing.JLabel" name="jLabel2">
+              <Properties>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Nombre camisa"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JTextField" name="txtNombre">
+              <Properties>
+                <Property name="horizontalAlignment" type="int" value="0"/>
+                <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[50, 20]"/>
+                </Property>
+                <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[120, 20]"/>
+                </Property>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
